# memoria-civica

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  VALIDATION_RESULTS.md  alembic.ini  docker-compose.backend.yml  eslint.config.js  generate-icons.js  memoria_civica_viabilidade.ipynb  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json  vitest.config.ts
.aiox/: project-status.yaml
.aiox-core/: core-config.yaml  install-manifest.yaml  version.json
.github/: BRANCH_PROTECTION.md
alembic/: env.py
docker/: docker-compose.prod.yml  init-pgvector.sh
docs/: CICD.md  SECRETS_SETUP.md  arquitetura-coleta-sistemica-evidencias-v1.md  arquitetura-minima-sinais-v1.md  arquitetura-tecnica-v1.md  arquitetura-watchlist-tematica-v1.md  deploy-v1-vercel-vps.md  fluxo-operacional-consulta-v1.md  handoff-implementacao-v1.md  indice-mestre-v1.md  mapa-arquitetura-sistema-v1.md  matriz-viabilidade-dados-evidencias-v1.md  memoria-civica-2026-discovery.md  one-pager-produto-v1.md  parecer-viabilidade-v1.md  plano-execucao-matriz-viabilidade-v1.md  plano-implementacao-v1.md  rodada-1-validacao-evidencias-v1.md  rodada-2-validacao-evidencias-v1.md  stack-dados-recomendado-v1.md  taxonomia-alertas-corrupcao-transparencia-v1.md  taxonomia-economia-custo-vida-v1.md  teste-watchlist-rodada-1.md  watchlist-tematica-v1-operacional.md  watchlist-tematica-v1-rascunho.md
etl/: Dockerfile  README.md  VALIDATION_SCENARIO_2.md  VALIDATION_SCENARIO_3.md  pyproject.toml
frontend/: README.md  VALIDATION_SCENARIO_1.md  VALIDATION_SCENARIO_3.md  components.json  (+9 more)
(+314 files in other folders)
